<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.dragolon28</groupId>
    <artifactId>SoundBoard</artifactId>
    <version>test</version>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.6</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>25</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>
        <exec.mainClass>com.dragolon28.soundboard.SoundBoardUI</exec.mainClass>
    </properties>
    <build>
      <!-- <pluginManagement> -->
        <plugins>
	  <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.6.1</version>
            <executions>
              <execution>
		<phase>package</phase>
		<goals>
		  <goal>shade</goal>
		</goals>
		<configuration>
		  <transformers>
                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                      <mainClass>com.dragolon28.soundboard.SoundBoardUI</mainClass>
                    </transformer>
		  </transformers>
		</configuration>
              </execution>
            </executions>
	  </plugin>
	  <plugin>
            <groupId>com.github.akman</groupId>
            <artifactId>jpackage-maven-plugin</artifactId>
            <version>0.1.5</version>
            <configuration>
              <!--
                Specifies the JDK home path which provides the tool needed.
                If not specified the jpackage tool executable will be find in
                the following order:
              
                  - user specified JDK home directory by toolchains-plugin
                  - JDK home directory specified by system variable JAVA_HOME
                  - system path specified by system variable PATH
              -->
              <!-- <toolhome>$‍{env.JPACKAGE_HOME}</toolhome> -->
              
              <!--
                Specifies the location in which generated output files are placed.
                Default value: $‍{project.build.directory}/jpackage
              -->
              <dest>target/jpackage</dest>
              
              <!--
                Specifies the name of subdirectory relative to the destination
                directory in which files of generated application image are placed.
              -->
              <name>SoundBoard</name>
              
              <!--
                Specifies the type of package to
                create: { PLATFORM | IMAGE | EXE | MSI }.
                Default value: PLATFORM (a platform dependent default type)
              -->
              <type>IMAGE</type>

	      <input>target</input>
	      <mainjar>SoundBoard-test.jar</mainjar>
	      <mainclass>com.dragolon28.soundboard.SoundBoardUI</mainclass>

              <!--
                Specifies the location of the predefined runtime
                image (result of jlink) that will be copied into
                the application image.
                If not specified, jpackage will run jlink to create
                the runtime image using options:
                  - strip-debug
                  - no-header-files
                  - no-man-pages
                  - strip-native-commands
              -->
              <!-- <runtimeimage>$‍{project.build.directory}/jlink/runtime-image</runtimeimage> -->
              
              <!--
                Specifies version of the application and/or package.
              -->
              <appversion>1.0</appversion>
              
              <!--
                Specifies copyright for the application.
              -->
              <copyright>Copyright (c) Zachary B Cross</copyright>
              
              <!--
                Specifies description of the application.
              -->
              <description>ASD Theater Soundboard</description>
              
              <!--
                Specifies vendor of the application.
              -->
              <vendor>Octobi28</vendor>
              
              <!--
                Specifies the location of the icon of the application package.
              -->
              <!-- <icon>$‍{project.basedir}/config/jpackage/resources/appname.ico</icon> -->
              
              <!--
                Specifies the main module (and optionally main class) of
                the application. This module must be located on the module path.
                When this option is specified, the main module will be linked
                in the Java runtime image.
                Either module or main-jar option can be specified
                but not both.
              -->
              <!-- <module>com.dragolon28.soundboard.SoundBoardUI</module> -->
              
              <!--
                Specifies the command line arguments to pass to the main class
                if no command line arguments are given to the launcher.
              -->
              <arguments></arguments>
              
              <!--
                Specifies the options to pass to the Java runtime.
              -->
              <!-- <javaoptions>-Dfile.encoding=UTF-8 -Xms256m -Xmx512m</javaoptions> -->
              <javaoptions>--enable-native-access=ALL-UNNAMED</javaoptions>
              
              <!--
                Specifies options are added to, or used to overwrite,
                the original command line options to build additional
                alternative launchers.
              -->

	      <!--
              <addlaunchers>
                <addlauncher>
                  <name>appname-cli</name>
                  <module>appModuleName/appClassName</module>
                  <arguments>- -help</arguments>
                  <javaoptions>-Xms256m -Xmx512m</javaoptions>
                  <appversion>1.0</appversion>
                  <icon>$‍{project.basedir}/config/jpackage/resources/appname-cli.ico</icon>
                  <winconsole>true</winconsole>
                </addlauncher>
              </addlaunchers>
              -->

              <!--
                Specifies the location of a resources directory that override
                jpackage resources. Icons, template files, and other resources
                of jpackage can be overridden by adding replacement resources
                to this directory.
              -->
              <!-- <resourcedir>$‍{project.basedir}/config/jpackage/resources</resourcedir> -->
            </configuration>
          </plugin>
        </plugins>
      <!-- </pluginManagement> -->
    </build>
 
</project>
